# cannoli

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  qemu_patches.patch  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: test.yml
cannoli/: Cargo.toml
cannoli/src/: lib.rs
cannoli_server/: Cargo.toml  build.rs
cannoli_server/ffi/: cannoli.h
cannoli_server/src/: cannoli_internals.rs  lib.rs
client_library/: Cargo.toml
client_library/src/: main.rs
example_symbolizer/: Cargo.toml  example_app.c
example_symbolizer/src/: main.rs
example_visualization/: Cargo.toml
examples/: ci_runner.py
examples/backtrace/: Cargo.toml  Makefile  backtrace_test.c
examples/backtrace/src/: lib.rs  main.rs
examples/backtrace/src/utils/: backtrace.rs  mod.rs  utils.rs
examples/benchmark/: Cargo.toml  Makefile  benchmark  benchmarkrv64  test.c
examples/benchmark/src/: main.rs
examples/benchmark_graph/: Cargo.toml  Makefile  benchmark  benchmarkrv64  log_1thr_256k_16.txt  log_2thr_256k_16.txt  log_3thr_256k_16.txt  log_4thr_256k_16.txt  plot.plt  test.c
examples/benchmark_graph/src/: main.rs
examples/coverage/: Cargo.toml
examples/coverage/src/: lib.rs  main.rs
examples/regtrace/: Cargo.toml  Makefile  example_app
examples/regtrace/src/: lib.rs  main.rs
examples/symbolizer/: Cargo.toml  Makefile  example_app.c  example_app64  symbols.txt
examples/symbolizer/src/: lib.rs  main.rs
examples/visualization/: Cargo.toml
examples/visualization/src/: main.rs
extensions/arch/: Cargo.toml
extensions/arch/src/: aarch64.rs  armv5tel.rs  default.rs  lib.rs  mipsel32.rs
jitter/: Cargo.toml
jitter/ffi/: cannoli.h
jitter/src/: cannoli_internals.S  cannoli_internals.rs  lib.rs
jitter_always/: Cargo.toml
jitter_always/src/: lib.rs
mempipe/: Cargo.toml
mempipe/benchmark/: benchmark.rs  mempipe_benchmark.txt  plot.plt  processor.txt
mempipe/src/: lib.rs
qemu_library/: Cargo.toml  build.rs
qemu_library/ffi/: cannoli.h
qemu_library/src/: cannoli_internals.rs  cannoli_memops.rs  internals.rs  lib.rs
qemu_pipe_client/: Cargo.toml
qemu_pipe_client/src/: main.rs
