[workspace]

resolver = "2"
members = [
    "mempipe",
    "cannoli",
    "jitter",
    "jitter_always",
    "examples/visualization",
    "examples/symbolizer",
    "examples/benchmark",
    "examples/benchmark_graph",
    "examples/coverage",
    "examples/regtrace",
    "examples/backtrace",
    "extensions/arch",
]
default-members = [
    "jitter_always",
]

[workspace.package]
version = "0.1.0"

