[package]
name = "backtrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jitter = { path = "../../jitter" }
cannoli = { path = "../../cannoli" }
multimap = "0.8.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "backtrace"
path = "src/main.rs"
