[package]
name = "regtrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jitter = { path = "../../jitter" }
cannoli = { path = "../../cannoli" }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "coverage_client"
path = "src/main.rs"

