[package]
name = "arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
aarch64 = []
aarch64be = []
alpha = []
armv5teb = []
armv5tel = []
cris = []
hexagon = []
i386 = []
i686 = []
m68k = []
microblaze = []
mips = []
mips64 = []
nios2 = []
openrisc = []
parisc = []
ppc = []
ppc64 = []
ppc64le = []
riscv32 = []
riscv64 = []
s390x = []
sh4 = []
sparc = []
sparc64 = []
x86_64 = []
xtensa = []
